# servicedesk

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  SECURITY.md  build.sh  conftest.py  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/accounts/: admin.py  api.py  models.py
apps/accounts/migrations/: 0001_initial.py
apps/assets/: admin.py  api.py  models.py
apps/assets/migrations/: 0001_initial.py
apps/sla/: admin.py  api.py  apps.py  models.py  services.py  tests.py
apps/sla/migrations/: 0001_initial.py
apps/tickets/: admin.py  ai.py  api.py  apps.py  choices.py  context_processors.py  forms.py  metrics.py  models.py  permissions.py  search.py  signals.py  urls.py  views.py
apps/tickets/management/commands/: seed.py  sla_sweep.py
apps/tickets/migrations/: 0001_initial.py  0002_notification.py
apps/tickets/tests/: factories.py  test_ai.py  test_analytics.py  test_api.py  test_htmx.py  test_models.py  test_notifications.py  test_search.py  test_views.py
config/: settings.py  urls.py  views.py
static/css/: app.css
templates/: base.html
templates/registration/: login.html
templates/tickets/: _comment_list.html  _ticket_rows.html  dashboard.html  notifications.html  reports.html  ticket_detail.html  ticket_form.html  ticket_list.html
